--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        version: ["3.10", "3.11", "3.12"]
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
@@ -33,7 +33,7 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install poetry
         poetry config virtualenvs.create false
-        poetry install --no-root --with dev
+        poetry install --with dev
     - name: Test with pytest
       id: citest
       run: |
