--- a/.github/workflows/python-quality.yml
+++ b/.github/workflows/python-quality.yml
@@ -26,7 +26,7 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install poetry
         poetry config virtualenvs.create false
-        poetry install --no-root --with dev
+        poetry install --with dev
     - name: Test & publish code coverage
       uses: paambaati/codeclimate-action@v8.0.0
       env:
