--- a/.github/workflows/reusable-github-pages.yml
+++ b/.github/workflows/reusable-github-pages.yml
@@ -1,3 +1,90 @@
+# on:
+#   workflow_call:
+#     inputs:
+#       site-version:
+#         required: true
+#         type: string
+#       version-alias:
+#         required: false
+#         type: string
+#         default: ""
+#       branch:
+#         required: false
+#         type: string
+#         default: "gh-pages"
+#       set-default:
+#         required: false
+#         type: boolean
+#         default: false
+
+# # Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+# # However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+# # NOTE: There's no option to not cancel pending jobs, but we should be able to avoid race conditions on
+# # the published gh-pages branch anyway. The expectation is to have at maximum one running process
+# # (after merging to main) and one release process waiting.
+# concurrency:
+#   group: "pages"
+#   cancel-in-progress: false
+
+# jobs:
+#   build_deploy_pages:
+#     runs-on: ubuntu-latest
+#     environment:
+#       name: github-pages
+
+#     permissions:
+#       contents: write
+
+#     steps:
+#       - name: Checkout
+#         uses: actions/checkout@v4
+
+#       - name: Set up Python 3.12
+#         uses: actions/setup-python@v5
+#         with:
+#           python-version: "3.12"
+
+#       # Here we want to install the current package in editable mode,
+#       # in case mkdocs needs the package (i.e. we are building a mkdocs plugin).
+#       - name: Install dependencies
+#         run: |
+#           python -m pip install --upgrade pip
+#           python -m pip install poetry
+#           poetry config virtualenvs.create false
+#           poetry install --with dev
+
+#       - name: Configure Git user
+#         run: |
+#           git config --local user.email "github-actions[bot]@users.noreply.github.com"
+#           git config --local user.name "github-actions[bot]"
+
+#       - name: Make sure previous versions are available to mike
+#         run: |
+#           git fetch origin gh-pages --depth=1
+
+#       - name: Build and deploy static pages
+#         run: |
+#           mike deploy ${{ inputs.site-version }} ${{ inputs.version-alias }} --update-aliases --push --branch ${{ inputs.branch }}
+
+#       - name: Set default site version
+#         if: ${{ inputs.set-default }}
+#         run: |
+#           mike set-default ${{ inputs.site-version }} --push --branch ${{ inputs.branch }}
+
+#       #  `mike` is specifically built to be used together with GitHub pages.
+#       # To upload the website to another service (i.e. AWS S3) uncomment
+#       # the following step to download the rendered HTML documentation to ./site directory.
+#       # You'll need to implement the upload steps for your provider.
+
+# #      - name: Download artifact to ./site
+# #        run: |
+# #          rm -rf ./site
+# #          git archive -o site.tar ${{ inputs.branch }}
+# #          mkdir -p ./site
+# #          tar xf site.tar -C ./site
+
+name: Deploy Nextra site to Pages
+
 on:
   workflow_call:
     inputs:
@@ -17,11 +104,6 @@ on:
         type: boolean
         default: false
 
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
-# NOTE: There's no option to not cancel pending jobs, but we should be able to avoid race conditions on
-# the published gh-pages branch anyway. The expectation is to have at maximum one running process
-# (after merging to main) and one release process waiting.
 concurrency:
   group: "pages"
   cancel-in-progress: false
@@ -31,54 +113,55 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: github-pages
-
     permissions:
       contents: write
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up Python 3.12
-        uses: actions/setup-python@v5
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
-          python-version: "3.12"
+          node-version: '18'
 
-      # Here we want to install the current package in editable mode,
-      # in case mkdocs needs the package (i.e. we are building a mkdocs plugin).
       - name: Install dependencies
+        working-directory: ./ndocs
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install poetry
-          poetry config virtualenvs.create false
-          poetry install --with dev
+          npm ci
+
+      - name: Build static site
+        working-directory: ./ndocs
+        run: |
+          npm run build
+          npm run export
 
       - name: Configure Git user
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
 
-      - name: Make sure previous versions are available to mike
-        run: |
-          git fetch origin gh-pages --depth=1
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./ndocs/out
+          destination_dir: ${{ inputs.site-version }}
+          keep_files: true
 
-      - name: Build and deploy static pages
+      - name: Update version aliases
+        if: inputs.version-alias != ''
         run: |
-          mike deploy ${{ inputs.site-version }} ${{ inputs.version-alias }} --update-aliases --push --branch ${{ inputs.branch }}
+          git checkout ${{ inputs.branch }}
+          ln -sfn ${{ inputs.site-version }} ${{ inputs.version-alias }}
+          git add .
+          git commit -m "Update version alias ${{ inputs.version-alias }} to ${{ inputs.site-version }}"
+          git push origin ${{ inputs.branch }}
 
       - name: Set default site version
-        if: ${{ inputs.set-default }}
+        if: inputs.set-default
         run: |
-          mike set-default ${{ inputs.site-version }} --push --branch ${{ inputs.branch }}
-
-      #  `mike` is specifically built to be used together with GitHub pages.
-      # To upload the website to another service (i.e. AWS S3) uncomment
-      # the following step to download the rendered HTML documentation to ./site directory.
-      # You'll need to implement the upload steps for your provider.
-
-#      - name: Download artifact to ./site
-#        run: |
-#          rm -rf ./site
-#          git archive -o site.tar ${{ inputs.branch }}
-#          mkdir -p ./site
-#          tar xf site.tar -C ./site
+          git checkout ${{ inputs.branch }}
+          echo '<meta http-equiv="refresh" content="0;url=${{ inputs.site-version }}">' > index.html
+          git add index.html
+          git commit -m "Set default version to ${{ inputs.site-version }}"
+          git push origin ${{ inputs.branch }}
