--- a/pyproject.toml
+++ b/pyproject.toml
@@ -85,11 +85,11 @@ types-networkx = "^3.2.1.20240703"
 types-colorama = "^0.4.15.20240311"
 types-tabulate = "^0.9.0.20240106"
 types-toml = "^0.10.8.20240310"
+
+
 [tool.coverage.run]
 branch = true
 source = ["fuseline"]
-# It's not necessary to configure concurrency here
-# because pytest-cov takes care of that
 
 [tool.coverage.report]
 fail_under = 50
@@ -106,6 +106,7 @@ python_version = "3.10"
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
 minversion = "6.0"
+asyncio_default_fixture_loop_scope = "function"
 addopts = "-n auto --cov-report=term-missing"
 testpaths = [
     "tests",
@@ -154,5 +155,5 @@ engine = "SerialEngine"
 
 [tool.fuseline.workflows]
 fake_eval = [
-    "fuseline.workflows.fake_eval.evaluate_model",
+    "tests.workflows.fake_eval.evaluate_model",
 ]
