--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,11 +39,10 @@ fuse =  "fuseline.cli.__main__:cli"
 ############################
 ### Package requirements ###
 ############################
-
 [tool.poetry.dependencies]
 python = ">=3.10,<3.13"
-networkx = "^3.3"
-numpy = "1.26.3"
+networkx = "^3.4"
+numpy = ">=2.0"
 filelock = "^3.15.4"
 click = "^8.1.7"
 toml = "^0.10.2"
