--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,10 +49,10 @@ toml = "^0.10.2"
 typeguard = "^4.3.0"
 tabulate = "^0.9.0"
 colorama = "^0.4.6"
-pydantic = "^2.8.2"
-
 pydot = "^3.0.1"
 loguru = "^0.7.2"
+pydantic = "^2.10.6"
+
 [tool.poetry.group.dev]
 optional = true
 
@@ -101,6 +101,7 @@ exclude_also = [
 [tool.mypy]
 files = "fuseline"
 python_version = "3.10"
+plugins = ["pydantic.mypy"]
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
