--- a/pyproject.toml
+++ b/pyproject.toml
@@ -104,10 +104,7 @@ python_version = "3.10"
 plugins = ["pydantic.mypy"]
 
 [tool.pytest.ini_options]
-asyncio_mode = "auto"
-minversion = "6.0"
-asyncio_default_fixture_loop_scope = "function"
-addopts = "-n auto --cov-report=term-missing"
+addopts = ""
 testpaths = [
     "tests",
 ]
