ci: use ruff for code style and typing

--- a/.github/workflows/python-typing.yml
+++ b/.github/workflows/python-typing.yml
@@ -26,5 +26,6 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install poetry tox
         make poetry-export
-    - name: Check typing
-      run: make typing
+      - name: Check typing with ruff
+        run: make typing
+
