--- a/.github/workflows/python-code-style.yml
+++ b/.github/workflows/python-code-style.yml
@@ -26,6 +26,7 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install poetry tox
         make poetry-export
-    - name: Check code style with black
-      run: |
-        make format
+      - name: Check code style with ruff
+        run: |
+          make format
+
