--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,14 +44,6 @@ python = ">=3.10,<3.13"
 
 [tool.poetry.group.dev.dependencies]
 coverage = ">=6.5.0"
-mkdocs = ">=1.4.3"
-mkdocstrings = { version = ">=0.24.0", extras = ["python"] }
-mkdocs-awesome-pages-plugin = "*"
-mkdocs-macros-adr-summary = "*"
-mkdocs-gen-files = ">=0.5.0"
-mkdocs-material = ">=9.1.16"
-mike = ">=2.0.0"
-pymdown-extensions = ">=10.0.1"
 pytest = "^8.0.0"
 pytest-asyncio = ">=0.20.3"
 pytest-cov = ">=4.0.0"
@@ -65,6 +57,8 @@ pytest-mock = "^3.14.0"
 ############################
 ### Tools configuration  ###
 ############################
+quarto = "^0.1.0"
+quarto-cli = "^1.7.32"
 
 
 [tool.coverage.run]
