--- a/docs/_quarto.yml
+++ b/docs/_quarto.yml
@@ -8,11 +8,9 @@ website:
   navbar:
     left:
       - href: index.qmd
-        text: Home
+        text: Getting Started
       - href: features/index.qmd
         text: Features
-      - href: usage.qmd
-        text: Usage Guide
       - href: api.qmd
         text: API Reference
 
@@ -20,6 +18,7 @@ format:
   html:
     theme: cosmo
     toc: true
+    toc-location: left
 
 execute:
   freeze: auto
