--- a/docs/_quarto.yml
+++ b/docs/_quarto.yml
@@ -55,9 +55,10 @@ website:
 
 format:
   html:
-    theme: cosmo
+    theme: lux
     toc: true
     toc-location: right
+    css: styles.css
 
 execute:
   freeze: auto
