--- a/docs/_quarto.yml
+++ b/docs/_quarto.yml
@@ -5,6 +5,7 @@ project:
 website:
   title: "Fuseline"
   repo-url: https://github.com/jsam/fuseline
+  search: true
   navbar:
     left:
       - href: getting-started/index.qmd
@@ -55,7 +56,12 @@ website:
 
 format:
   html:
-    theme: lux
+    theme:
+      light: lux
+      dark: darkly
+    highlight-style:
+      light: github
+      dark: github-dark
     toc: true
     toc-location: right
     css: styles.css
