--- a/docs/_quarto.yml
+++ b/docs/_quarto.yml
@@ -56,10 +56,10 @@ website:
 
 format:
   html:
-    theme:
-      light: lux
-      dark: darkly
-    highlight-style: default
+    theme: [lux, darkly]
+    highlight-style:
+      light: github
+      dark: github-dark
     toc: true
     toc-location: right
     css: styles.css
