--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,6 +27,16 @@ theme:
   name: material
   features:
     - content.code.copy
+    - navigation.tabs
+  palette:
+    - scheme: default
+      toggle:
+        icon: material/weather-night
+        name: Switch to dark mode
+    - scheme: slate
+      toggle:
+        icon: material/weather-sunny
+        name: Switch to light mode
 plugins:
   - search
   - mkdocstrings:
@@ -37,6 +47,7 @@ plugins:
 markdown_extensions:
   - admonition
   - codehilite
+  - pymdownx.highlight
   - toc:
       permalink: true
 extra_css:
