--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,6 +25,7 @@ nav:
   - API Reference: api.md
 theme:
   name: material
+  highlightjs: true
   features:
     - content.code.copy
     - navigation.tabs
@@ -46,8 +47,11 @@ plugins:
             - "import sys; sys.path.append('.')"
 markdown_extensions:
   - admonition
-  - codehilite
-  - pymdownx.highlight
+  - pymdownx.highlight:
+      anchor_linenums: true
+      use_pygments: true
+      pygments_style: github
+  - pymdownx.superfences
   - toc:
       permalink: true
 extra_css:
