--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -51,7 +51,10 @@ markdown_extensions:
       anchor_linenums: true
       use_pygments: true
       pygments_style: github
+      pygments_dark_style: github-dark
   - pymdownx.superfences
+  - codehilite
+  - pymdownx.inlinehilite
   - toc:
       permalink: true
 extra_css:
