--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,12 +54,12 @@ tox = ">=4.12.1"
 pytest-mock = "^3.14.0"
 mkdocs-material = "^9.5.15"
 pymdown-extensions = "^10.4"
-"mkdocstrings[python]" = "^0.24.0"
 
 
 ############################
 ### Tools configuration  ###
 ############################
+mkdocstrings = "^0.29.1"
 
 
 [tool.coverage.run]
