--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,10 +48,11 @@ markdown_extensions:
   - admonition
   - pymdownx.highlight:
       anchor_linenums: true
-      linenums: true
-      pygments_style: github
-  - pymdownx.superfences
+      line_spans: __span
+      pygments_lang_class: true
   - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
   - toc:
       permalink: true
 extra_css:
