--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,6 +25,7 @@ nav:
   - API Reference: api.md
 theme:
   name: material
+  custom_dir: docs/overrides
   features:
     - content.code.copy
     - navigation.tabs
