--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,6 +25,7 @@ nav:
   - API Reference: api.md
 theme:
   name: material
+  custom_dir: docs/overrides
   features:
     - content.code.copy
     - navigation.tabs
@@ -48,11 +49,14 @@ markdown_extensions:
   - admonition
   - pymdownx.highlight:
       anchor_linenums: true
-      linenums: true
-      pygments_style: github
-  - pymdownx.superfences
+      line_spans: __span
+      pygments_lang_class: true
   - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
   - toc:
       permalink: true
 extra_css:
   - styles.css
+extra:
+  generator: "Fuseline Documentation"
