--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,6 +22,13 @@ nav:
       - features/branching-actions.md
       - features/fail-fast-policy.md
       - features/and-or-joins.md
+  - For Developers:
+      - for-developers/index.md
+      - for-developers/execution-flow.md
+      - for-developers/state-management.md
+      - for-developers/policies.md
+      - for-developers/process-engine-tests.md
+      - for-developers/broker-api.md
   - API Reference: api.md
 theme:
   name: material
