--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,6 +6,7 @@ nav:
       - getting-started/installation.md
       - getting-started/concepts.md
       - getting-started/first-agent.md
+      - getting-started/worker-package.md
   - Features & Concepts:
       - features/index.md
       - features/steps-tasks.md
