--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,7 +1,7 @@
-version: '3'
 services:
   db:
-    image: pgvector/pgvector:latest
+    # Postgres image with the pgvector extension built in
+    image: pgvector/pgvector:pg16
     environment:
       POSTGRES_USER: fuseline
       POSTGRES_PASSWORD: fuseline
