--- a/examples/docker-compose.yml
+++ b/examples/docker-compose.yml
@@ -1,7 +1,7 @@
-version: '3'
 services:
   db:
-    image: postgres:15
+    # Postgres image with pgvector extension
+    image: pgvector/pgvector:pg16
     environment:
       POSTGRES_USER: fuseline
       POSTGRES_PASSWORD: fuseline
